Updated to new jaxb version
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>