@@ -1,37 +1,51 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.oracle.metrojpms</groupId>
-  <artifactId>jaxb-ri-client</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.oracle.metrojpms</groupId>
+    <artifactId>jaxb-ri-client</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>Client using JAXB runtime/impl dependency</name>
+    <name>Client using JAXB runtime/impl dependency</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
-    </dependency>
-      <dependency>
-          <groupId>com.sun.xml.bind</groupId>
-          <artifactId>jaxb-ri</artifactId>
-          <version>2.3.1-SNAPSHOT</version>
-          <type>zip</type>
-      </dependency>
-      <dependency>
-          <groupId>javax.xml.bind</groupId>
-          <artifactId>jaxb-api</artifactId>
-          <version>2.3.0</version>
-      </dependency>
-  </dependencies>
+
+    <repositories>
+        <repository>
+            <id>releases.java.net</id>
+            <url>http://maven.java.net/content/repositories/releases/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>jvnet-nexus-staging</id>
+            <url>http://maven.java.net/content/repositories/staging/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-ri</artifactId>
+            <version>2.4.0-b180608.0325</version>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -93,17 +107,13 @@
                             <executable>java</executable>
                             <arguments>
                                 <argument>--class-path</argument>
-                                <argument>${project.build.directory}/classes:${project.build.directory}/mods/jaxb-ri/lib/*</argument>
+                                <argument>${project.build.directory}/classes</argument>
                                 <argument>--upgrade-module-path</argument>
                                 <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
                                 <argument>--module-path</argument>
-                                <argument>${project.build.directory}/mods/jaxb-ri/mod</argument>
+                                <argument>${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib</argument>
                                 <argument>--add-modules</argument>
                                 <argument>com.sun.xml.bind,com.sun.tools.xjc,com.sun.tools.jxc</argument>
-                                <argument>--add-reads</argument>
-                                <argument>com.sun.tools.jxc=ALL-UNNAMED</argument>
-                                <argument>--add-reads</argument>
-                                <argument>com.sun.tools.xjc=ALL-UNNAMED</argument>
                                 <!--<argument>-jar</argument>
                                 <argument>${project.build.directory}/jaxb-ri-client-1.0-SNAPSHOT.jar</argument>-->
                                 <argument>com.oracle.jaxb.riclient.App</argument>
@@ -123,15 +133,11 @@
                                 <argument>--upgrade-module-path</argument>
                                 <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
                                 <argument>--module-path</argument> <!-- or -p  -->
-                                <argument>${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib</argument>
-                                <argument>--add-modules</argument>
-                                <argument>com.sun.tools.xjc,relaxngDatatype</argument>
-                                <argument>-jar</argument>
-                                <argument>--add-reads</argument>
-                                <argument>com.sun.tools.xjc=relaxngDatatype</argument>
-                                <argument>--add-reads</argument>
-                                <argument>com.sun.xml.xsom=relaxngDatatype</argument>
-                                <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-xjc.jar</argument>
+                                <argument>
+                                    ${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib
+                                </argument>
+                                <argument>-m</argument>
+                                <argument>com.sun.tools.xjc/com.sun.tools.xjc.XJCFacade</argument>
                                 <argument>-p</argument>
                                 <argument>com.oracle.metrojpms</argument>
                                 <argument>-d</argument>
@@ -154,11 +160,13 @@
                                 <argument>--upgrade-module-path</argument>
                                 <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-api.jar</argument>
                                 <argument>--module-path</argument> <!-- or -p  -->
-                                <argument>${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib</argument>
+                                <argument>
+                                    ${project.build.directory}/mods/jaxb-ri/mod:${project.build.directory}/mods/jaxb-ri/lib
+                                </argument>
                                 <argument>--add-modules</argument>
                                 <argument>com.sun.tools.jxc,relaxngDatatype</argument>
-                                <argument>-jar</argument>
-                                <argument>${project.build.directory}/mods/jaxb-ri/mod/jaxb-jxc.jar</argument>
+                                <argument>-m</argument>
+                                <argument>com.sun.tools.jxc/com.sun.tools.jxc.SchemaGeneratorFacade</argument>
                                 <argument>-d</argument>
                                 <argument>${project.build.directory}/generated-sources</argument>
                                 <argument>${project.build.directory}/classes/com/oracle/metrojpms/Author.java</argument>
